add new icons, started header

--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <title>Home</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="img/personal-logo.svg">
 
 </head>
 <body>
     <header>
-        <img src="img/personal-logo.svg" class="header-logo">
-        <div class="name">
+        <div class="left-side">
+            <a href="index.html">
+                <img src="img/personal-logo.svg" class="header-logo">
+            </a>
+            <div class="name">
             Lubomír Seif
+            </div>
+        </div>
+        <div class="right-side">
+            <a href="https://www.linkedin.com/in/lubom%C3%ADr-seif-21036b207", target="_blank">
+                <button class="head-button" onclick="">
+                    <img src="img/LinkedIn_icon.svg" class="linkedin-img">
+                </button>
+            </a>
+            <a href="https://github.com/saltylubik", target="_blank">
+                <button class="head-button">
+                    <img src="img/github-icon.svg" class="github-img">
+                </button>
+            </a>
         </div>
     </header>
-    <h1>Home</h1>
+    <div>
+        <h1>Ahoj, jmenuji se Lubomír Seif</h1>
+    </div>
 
 </body>
 </html>
